--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">GithubApplication3</string>
     <string name="tombol_pencari">tombol pencari</string>
     <string name="mencari">Mencari</string>
+    <string name="profil_pengguna">profil pengguna</string>
+
+    <string name="tab_1">Pengikut</string>
+    <string name="tab_2">Mengikuti</string>
+    <string name="favorite">Favorite</string>
+    <string name="set_pengingat">Set Pengingat</string>
+    <string name="on">ON</string>
+    <string name="off">OFF</string>
+    <string name="pengaturan">Pengaturan</string>
 </resources>
